Utworzono za pomocą Colab

--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -129,7 +129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 1,
       "metadata": {
         "id": "rEZpNKdv1-Fo"
       },
@@ -140,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 2,
       "metadata": {
         "id": "53n0Mpm36Sou"
       },
@@ -169,7 +169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 3,
       "metadata": {
         "id": "BiAHPuz5W2SG"
       },
@@ -208,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 4,
       "metadata": {
         "id": "GdQ_0VKiW2SI"
       },
@@ -222,7 +222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 5,
       "metadata": {
         "id": "LKr8TlwTW2SI"
       },
@@ -298,14 +298,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 347
         },
         "id": "u0brJlsbW2SI",
-        "outputId": "1a5d99f5-e45c-4c7d-8253-68bb20e23cd4"
+        "outputId": "6abf1d7e-b083-47cb-8d9d-680c79d0a0b5"
       },
       "outputs": [
         {
@@ -363,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 7,
       "metadata": {
         "id": "5eAbbyg07J_6"
       },
@@ -458,13 +458,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "aibqp-L-W2SJ",
-        "outputId": "bea31a52-a1b1-4239-c2da-4907e7106074"
+        "outputId": "14679846-6887-460a-c246-712a2ab2aba9"
       },
       "outputs": [
         {
@@ -483,13 +483,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "qfU07l1CW2SJ",
-        "outputId": "3ead49d1-a492-440e-9a06-7d4afd2f86b0"
+        "outputId": "d84e3492-c176-491e-c516-afd1d120d49a"
       },
       "outputs": [
         {
@@ -548,10 +548,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 10,
       "metadata": {
         "id": "45_h0YFAd45L",
-        "outputId": "1b215e9a-8ece-4599-b4d6-07b3e600aba4",
+        "outputId": "39e21f24-aaad-424c-f0c7-1651a7e87148",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -559,17 +559,112 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading: \"https://download.pytorch.org/models/resnet18-f37072fd.pth\" to /root/.cache/torch/hub/checkpoints/resnet18-f37072fd.pth\n"
+          ]
+        },
+        {
+          "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Test Evaluation: 100%|██████████| 1/1 [00:00<00:00,  1.29it/s]"
+            "100%|██████████| 44.7M/44.7M [00:00<00:00, 159MB/s]\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\n",
-            "✅ Model loaded from checkpoint: Test loss: 0.407, test acc: 89.6%\n"
+            "🚀 Training CNN for 5 epochs...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Epoch 1/5 training  : 100%|██████████| 28/28 [00:04<00:00,  6.21it/s, train_acc=39.0%, train_loss=0.553]\n",
+            "Epoch 1/5 validation: 100%|██████████| 2/2 [00:00<00:00,  2.18it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5 — val loss: 1.351, val acc: 51.7%\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Epoch 2/5 training  : 100%|██████████| 28/28 [00:03<00:00,  7.02it/s, train_acc=81.1%, train_loss=0.176]\n",
+            "Epoch 2/5 validation: 100%|██████████| 2/2 [00:01<00:00,  1.77it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 2/5 — val loss: 0.371, val acc: 85.4%\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Epoch 3/5 training  : 100%|██████████| 28/28 [00:03<00:00,  8.45it/s, train_acc=93.0%, train_loss=0.070]\n",
+            "Epoch 3/5 validation: 100%|██████████| 2/2 [00:00<00:00,  2.25it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 3/5 — val loss: 0.294, val acc: 89.8%\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Epoch 4/5 training  : 100%|██████████| 28/28 [00:03<00:00,  8.71it/s, train_acc=94.3%, train_loss=0.059]\n",
+            "Epoch 4/5 validation: 100%|██████████| 2/2 [00:00<00:00,  2.23it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 4/5 — val loss: 0.546, val acc: 83.7%\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Epoch 5/5 training  : 100%|██████████| 28/28 [00:04<00:00,  6.58it/s, train_acc=96.4%, train_loss=0.042]\n",
+            "Epoch 5/5 validation: 100%|██████████| 2/2 [00:00<00:00,  2.21it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 5/5 — val loss: 0.533, val acc: 86.4%\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Test Evaluation: 100%|██████████| 1/1 [00:00<00:00,  1.50it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Model training complete: Test loss: 0.407, test acc: 89.6%\n"
           ]
         },
         {
@@ -620,7 +715,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 11,
       "metadata": {
         "id": "e5SHjz6k6vRf"
       },
@@ -769,10 +864,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 12,
       "metadata": {
         "id": "KRqWQwL9jyn9",
-        "outputId": "c7cd64d0-0b17-4525-f06b-2e686b4338cc",
+        "outputId": "ea827d53-c709-422d-cb4c-74e2f46206e5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -800,7 +895,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 13,
       "metadata": {
         "id": "jx_wP_-Mjyn9"
       },
@@ -831,10 +926,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 14,
       "metadata": {
         "id": "WrQc_g75jyn-",
-        "outputId": "19f202ed-3515-490e-9c0c-f12f8ed3fb84",
+        "outputId": "5aa04e31-bb9c-4a78-e87d-50ff9cc47fd2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 533
@@ -917,20 +1012,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "__5fXL7B0Xz8",
-        "outputId": "fe51e53b-118a-4b30-8b1d-2ce8de1ffee5"
+        "outputId": "c0f0c8f2-a045-4432-9f27-d50b5b660d05"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: segment-anything in /usr/local/lib/python3.12/dist-packages (1.0)\n"
+            "Collecting segment-anything\n",
+            "  Downloading segment_anything-1.0-py3-none-any.whl.metadata (487 bytes)\n",
+            "Downloading segment_anything-1.0-py3-none-any.whl (36 kB)\n",
+            "Installing collected packages: segment-anything\n",
+            "Successfully installed segment-anything-1.0\n"
           ]
         }
       ],
@@ -941,7 +1040,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 16,
       "metadata": {
         "id": "Jtgf-gDJsHdy"
       },
@@ -961,7 +1060,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 17,
       "metadata": {
         "id": "Ju-OgJclsHdy"
       },
@@ -1014,10 +1113,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 18,
       "metadata": {
         "id": "riC_HistsHdy",
-        "outputId": "84a45990-fca7-4224-ee82-f071c99f24f8",
+        "outputId": "d4057e93-d225-425b-8007-3824afddceb3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 703
@@ -1089,7 +1188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 19,
       "metadata": {
         "id": "BrS-h1gwvyfC"
       },
@@ -1109,7 +1208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 20,
       "metadata": {
         "id": "TvfLJI5AxmJW",
         "collapsed": true,
@@ -1117,7 +1216,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "46fa3c49-2259-4220-ffb1-e74943ea39ba"
+        "outputId": "4a19d3d3-cabf-4e4a-baed-bc37d1e46fd5"
       },
       "outputs": [
         {
@@ -1348,7 +1447,7 @@
       "metadata": {
         "id": "CuEMq9OgW5QE"
       },
-      "execution_count": 60,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -1405,7 +1504,7 @@
       "metadata": {
         "id": "G-nf63bIeAGN"
       },
-      "execution_count": 61,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -1439,9 +1538,9 @@
           "height": 703
         },
         "id": "cd9-nZG1gyYQ",
-        "outputId": "172c9e13-462e-4fdb-8d30-ec505ddb3503"
+        "outputId": "fe4c3221-ce81-4196-9f33-1cd1e2132ca5"
       },
-      "execution_count": 62,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1506,9 +1605,9 @@
           "height": 703
         },
         "id": "4HrSTuqthdzm",
-        "outputId": "880a49df-514f-482d-fa26-4a98bdf162df"
+        "outputId": "461beb3c-982a-4fb0-b9b9-be5915b47663"
       },
-      "execution_count": 63,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1600,7 +1699,7 @@
       "metadata": {
         "id": "uwd0umF5pijl"
       },
-      "execution_count": 64,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -1634,9 +1733,9 @@
           "height": 703
         },
         "id": "AVhr9uZAtqos",
-        "outputId": "2ca85a48-0beb-440f-92b2-3a1b8f57a139"
+        "outputId": "3c0d0d5d-8d21-4189-bf2f-199142980e5d"
       },
-      "execution_count": 65,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1741,7 +1840,7 @@
       "metadata": {
         "id": "Ianow7mWu2MZ"
       },
-      "execution_count": 66,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -1775,9 +1874,9 @@
           "height": 703
         },
         "id": "2zWlv2vVvvQl",
-        "outputId": "bb3a5e8c-9d43-4f77-e198-712f16f5136d"
+        "outputId": "967c0e77-08e5-4efb-8682-5fff915b8dfb"
       },
-      "execution_count": 67,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1859,7 +1958,7 @@
       "metadata": {
         "id": "3SEgZJHcJPV5"
       },
-      "execution_count": 68,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -1926,7 +2025,7 @@
       "metadata": {
         "id": "SIkxiXvLNt23"
       },
-      "execution_count": 69,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1936,12 +2035,12 @@
       ],
       "metadata": {
         "id": "qp7-Q1HpZ-F_",
-        "outputId": "41e812b6-27b6-4749-c579-1b2f3682d622",
+        "outputId": "bc03d484-fe25-4e36-feea-97ed449799c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 70,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -1954,7 +2053,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "FG:   0%|          | 0/1 [03:37<?, ?it/s]"
+            "FG:   0%|          | 0/1 [03:27<?, ?it/s]"
           ]
         },
         {
@@ -1983,12 +2082,12 @@
       ],
       "metadata": {
         "id": "7CAHSqNDbzrm",
-        "outputId": "b7f93b0c-d7df-4762-c261-61c32eaa9729",
+        "outputId": "b0c73df1-46f1-45cd-da21-820e44f65a3c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 72,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -2001,7 +2100,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "FGBG:   0%|          | 0/1 [03:36<?, ?it/s]"
+            "FGBG:   0%|          | 0/1 [03:27<?, ?it/s]"
           ]
         },
         {
@@ -2030,12 +2129,12 @@
       ],
       "metadata": {
         "id": "nBezY1R4b6a0",
-        "outputId": "192d6172-ac20-4d69-ea8d-e405d9900600",
+        "outputId": "ef43bb93-5254-4d18-c2c2-85714c922fe1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 73,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -2048,7 +2147,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "FG2:   0%|          | 0/1 [03:37<?, ?it/s]"
+            "FG2:   0%|          | 0/1 [03:27<?, ?it/s]"
           ]
         },
         {
@@ -2077,12 +2176,12 @@
       ],
       "metadata": {
         "id": "69r6Y0cib_kp",
-        "outputId": "50cd3794-c4fa-48c2-a421-f4f06f834cf4",
+        "outputId": "4f939fcf-9a07-44b6-cbca-55fb49b07987",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 74,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -2095,7 +2194,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "FGBG2:   0%|          | 0/1 [03:36<?, ?it/s]"
+            "FGBG2:   0%|          | 0/1 [03:27<?, ?it/s]"
           ]
         },
         {
