Utworzono za pomocą Colab

--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -1541,7 +1541,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "***SamPipeline_FG2*** samples randomly 10 points from high-confidence regions of the Grad-CAM heatmap (values $\\geq$ 0.9). By relying on multiple points, we aim to achieve more stable representation of object's location."
+      ],
       "metadata": {
         "id": "ZK5AhFEGXaXQ"
       }
@@ -1655,6 +1657,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "***SamPipeline_FGBG2*** extends the idea of previous approach - it randomly select 10 foreground points (values $\\geq$ 0.9) and 10 background points (values $\\leq$ 0.2). This pipeline with an aim to make the system even more stable."
+      ],
+      "metadata": {
+        "id": "75W8C-s_Y4-r"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "class SamPipeline_FGBG2(BasicSamPipeline):\n",
@@ -1731,26 +1742,6 @@
     {
       "cell_type": "code",
       "source": [
-        "def example_sam4():\n",
-        "    indices = [3, 10, 42]\n",
-        "    images, labels, gt_masks = next(iter(test_loader))\n",
-        "    images, labels, gt_masks = images[indices], labels[indices], gt_masks[indices]\n",
-        "    images = images.to(device)\n",
-        "\n",
-        "    basic_pipeline = SamPipeline_FGBG2(grad_cam = GradCAM(model=model, target_layers=target_layers))\n",
-        "\n",
-        "    results = basic_pipeline(images).cpu()\n",
-        "\n",
-        "    for image, result, gt_mask in zip(images, results, gt_masks, strict=True):\n",
-        "        show_image_row(\n",
-        "            {\n",
-        "                \"Input image\": inverse_transform(image),\n",
-        "                \" SAM predicted mask\": result,\n",
-        "                \"Ground-truth mask\": gt_mask,\n",
-        "            }\n",
-        "        )\n",
-        "\n",
-        "\n",
         "example_sam_v2(SamPipeline_FGBG2(grad_cam = GradCAM(model=model, target_layers=target_layers)))"
       ],
       "metadata": {
@@ -1794,6 +1785,26 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Visualizations for *SamPipeline_FG2* seems remarkably similar to previous single-point methods. Conversly, the *SamPipeline_FGBG2* strategy did not perform as anticipated. Instead of enhancing performance and offering better results, it seems to sometimes mark larger, undesirable areas."
+      ],
+      "metadata": {
+        "id": "sWx6Ywoz7LJb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Evaluation\n",
+        "----\n",
+        "In this section, the evaluation of four constructed pipelines will be done. Three metrics will be uused - IoU, Hit Rate and Distance from center of mass of the shape."
+      ],
+      "metadata": {
+        "id": "9YjRgNyG7tY-"
+      }
     },
     {
       "cell_type": "code",
