Utworzono za pomocą Colab

--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -1800,7 +1800,7 @@
       "source": [
         "## Evaluation\n",
         "----\n",
-        "In this section, the evaluation of four constructed pipelines will be done. Three metrics will be uused - IoU, Hit Rate and Distance from center of mass of the shape."
+        "In this section, the evaluation of four constructed pipelines will be done. Three metrics will be used - IoU, Hit Rate and Distance from center of mass of the ground truth mask."
       ],
       "metadata": {
         "id": "9YjRgNyG7tY-"
@@ -1927,7 +1927,8 @@
     {
       "cell_type": "code",
       "source": [
-        "iou1, hr1, d1 = evaluation_sam(SamPipeline_FG(grad_cam = GradCAM(model=model, target_layers=target_layers)), test_loader, name=\"FG\")"
+        "# Evaluation for 'SamPipeline_FG'\n",
+        "iou_fg, hr_fg, d_fg = evaluation_sam(SamPipeline_FG(grad_cam = GradCAM(model=model, target_layers=target_layers)), test_loader, name=\"FG\")"
       ],
       "metadata": {
         "id": "qp7-Q1HpZ-F_",
@@ -1974,7 +1975,8 @@
     {
       "cell_type": "code",
       "source": [
-        "iou2, hr2, d2 = evaluation_sam(SamPipeline_FGBG(grad_cam = GradCAM(model=model, target_layers=target_layers)), test_loader, name=\"FGBG\")"
+        "# Evaluation for 'SamPipeline_FGBG'\n",
+        "iou_fgbg, hr_fgbg, d_fgbg = evaluation_sam(SamPipeline_FGBG(grad_cam = GradCAM(model=model, target_layers=target_layers)), test_loader, name=\"FGBG\")"
       ],
       "metadata": {
         "id": "7CAHSqNDbzrm",
@@ -2021,7 +2023,8 @@
     {
       "cell_type": "code",
       "source": [
-        "iou3, hr3, d3 = evaluation_sam(SamPipeline_FG2(grad_cam = GradCAM(model=model, target_layers=target_layers)), test_loader, name=\"FG2\")"
+        "# Evaluation for 'SamPipeline_FG2'\n",
+        "iou_fg2, hr_fg2, d_fg2 = evaluation_sam(SamPipeline_FG2(grad_cam = GradCAM(model=model, target_layers=target_layers)), test_loader, name=\"FG2\")"
       ],
       "metadata": {
         "id": "nBezY1R4b6a0",
@@ -2068,7 +2071,8 @@
     {
       "cell_type": "code",
       "source": [
-        "iou4, hr4, d4 = evaluation_sam(SamPipeline_FGBG2(grad_cam = GradCAM(model=model, target_layers=target_layers)), test_loader, name=\"FGBG2\")"
+        "# Evaluation for 'SamPipeline_FGBG2'\n",
+        "iou_fgbg2, hr_fgbg2, d_fgbg2 = evaluation_sam(SamPipeline_FGBG2(grad_cam = GradCAM(model=model, target_layers=target_layers)), test_loader, name=\"FGBG2\")"
       ],
       "metadata": {
         "id": "69r6Y0cib_kp",
@@ -2111,6 +2115,22 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Evaluation results**\n",
+        "\n",
+        "\n",
+        "\n",
+        "1.   ***SamPipeline_FG***: this basic approach performed satisfactorily, achievieng an average IoU of $72,8$% (which is higher than $65$% requirement for this project), an average Hit Rate of $68,6$% and average Distance of $5,98$.\n",
+        "2.   ***SamPipeline_FGBG***: performed similarly to the previous approach, however, it resulted in slightly lower IoU metric ($72,1$%).\n",
+        "3.   ***SamPipeline_FG2***: this strategy emerged as the best approach - increasing the number of foreground points improved all three metrics. IoU reached $75,7$%, the Hit Rate $70,3$% and the Distance $5,86$.\n",
+        "4.   ***SamPipeline_FGBG2**: this approach performed the worst, confirming the observations from previous that this pipeline does not behave as anticipated. The IoU dropped significantly to $52,2$%, while the Hit Rate and the Distance were at similar levels to previous methods."
+      ],
+      "metadata": {
+        "id": "fo8DxA4eVWDb"
+      }
     }
   ],
   "metadata": {
