Utworzono za pomocą Colab

--- a/DNN_Homework2.ipynb
+++ b/DNN_Homework2.ipynb
@@ -798,8 +798,8 @@
         "        # choosing results for certain class within the batch\n",
         "        target_scores = outputs[torch.arange(input_tensor.shape[0]), targets]\n",
         "\n",
-        "        # we sum 'target_scores', so that we can compute backward for the whole batch instead of computing it for each image\n",
-        "        # 'retain_graph=True' was set in order to avoid deleting the graph used for computing gradients (?)\n",
+        "        # we sum 'target_scores', so that we can compute backward for the whole batch, instead of computing it for each image\n",
+        "        # 'retain_graph=True' was set in order to avoid deleting the graph used for computing gradients\n",
         "        target_scores.sum().backward(retain_graph=True)\n",
         "\n",
         "        # creating list used for heatmaps\n",
@@ -810,7 +810,7 @@
         "          activs = self.activations[layer]\n",
         "          grads = self.gradients[layer]\n",
         "\n",
-        "          # Following computations are using formulas from GradCAM paper\n",
+        "          # Following computations use formulas from GradCAM paper\n",
         "          # computing weights by taking mean over height and width dimensions\n",
         "          weights = torch.mean(grads, dim=(2, 3), keepdim=True)\n",
         "\n",
@@ -1038,7 +1038,7 @@
         "---\n",
         "In this part, we use the SAM model to perform automated image segmentation. The initial preimplmented *BasicSamPipeline* delivered unsuccessful results due to its naive assumption that target object is always located in the center of the image.\n",
         "\n",
-        "To improve it, four new SAM pipelines were implemented using the Grad-CAM approach. These pipelines identify points of the objects and the background, enhancing the efectiveness of segmentation."
+        "To improve it, four new SAM pipelines were implemented using the Grad-CAM approach. These pipelines identify points of the object and the background, aiming to enhance the efectiveness of segmentation."
       ]
     },
     {
@@ -1428,7 +1428,7 @@
         "      # combining results\n",
         "      point_coords = np.concatenate((points_fg, points_bg), axis=1)\n",
         "\n",
-        "      #converting to numpy array\n",
+        "      # converting to numpy array\n",
         "      point_coords = np.array(point_coords)\n",
         "\n",
         "      # saving points, it will be useful during evaluation\n",
@@ -1495,7 +1495,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The visualizations whow that both pipelines perform well, offering a significant progress in comparison with the initial SAM pipeline. The results are truly similar for both *SamPipeline_FG* and *SamPipeline_FGBG*. The rhombus and circle are segmented accurately, however, the segmentation of square is much more precise.\n",
+        "The visualizations whow that both pipelines perform well, offering a significant progress in comparison with the initial SAM pipeline. The results are truly similar for both *SamPipeline_FG* and *SamPipeline_FGBG*. The rhombus and circle are segmented accurately, however, the segmentation of square is much less precise.\n",
         "\n",
         "In order to look for next upgrades, two new pipelines were implemented with more complex logic of extracting points."
       ],
@@ -1555,7 +1555,7 @@
         "        # appending points\n",
         "        points.append(fg_points)\n",
         "\n",
-        "      #converting to numpy array\n",
+        "      # converting to numpy array\n",
         "      point_coords = np.array(points)\n",
         "\n",
         "      # saving points, it will be useful during evaluation\n",
@@ -1623,7 +1623,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "***SamPipeline_FGBG2*** extends the idea of previous approach - it randomly select 10 foreground points (values $\\geq$ 0.9) and 10 background points (values $\\leq$ 0.2). This pipeline with an aim to make the system even more stable."
+        "***SamPipeline_FGBG2*** extends the idea of previous approach - it randomly select 10 foreground points (values $\\geq$ 0.9) and 10 background points (values $\\leq$ 0.2). This pipeline was designed with an aim to make the system even more stable."
       ],
       "metadata": {
         "id": "75W8C-s_Y4-r"
@@ -2088,7 +2088,7 @@
         "\n",
         "1.   ***SamPipeline_FG***: this basic approach performed satisfactorily, achievieng an average IoU of $72,8$% (which is higher than $65$% requirement for this project), an average Hit Rate of $68,6$% and average Distance of $5,98$.\n",
         "2.   ***SamPipeline_FGBG***: performed similarly to the previous approach, however, it resulted in slightly lower IoU metric ($72,1$%).\n",
-        "3.   ***SamPipeline_FG2***: this strategy emerged as the best approach - increasing the number of foreground points improved all three metrics. IoU reached $75,7$%, the Hit Rate $70,3$% and the Distance $5,86$.\n",
+        "3.   ***SamPipeline_FG2***: this strategy emerged as the best approach - increasing the number of foreground points improved all three metrics. IoU reached $75,7$%, Hit Rate $70,3$% and Distance $5,86$.\n",
         "4.   ***SamPipeline_FGBG2***: this approach performed the worst, confirming the observations from previous that this pipeline does not behave as anticipated. The IoU dropped significantly to $52,2$%, while the Hit Rate and the Distance were at similar levels to previous methods."
       ],
       "metadata": {
